# fastapi-batch-api

./: .gitignore  README.md  pyproject.toml
fastapi_batch_api/: app.py
tests/: conftest.py  test_batch.py  test_transaction.py
