[tool.poetry]
name = "fastapi-batch-api"
version = "0.1.0"
description = ""
authors = ["Axel Vanraes <axel.vanraes@tiro.health>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["cli"], version = "^0.115.2" }
pytest = "^8.3.3"
httpx = "^0.27.2"

[tool.pyright]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
